@@ -77,5 +77,6 @@ wall::/wall hrm...::write all ops, sends a /notice to all the channel operators 
 wallex::/wallex JakieChan I think chan likes men.::write all except - sends a /notice to everyone on the active channel except the specified nicks.::nick1,nick2 - users who do not receive the notice::text - message to send
 whois::/whois `butane::looks up information on the specified user from the server.::nick - user to look up information on.
 wi::/wi `butane::looks up information on the specified user from the server.::nick - user to look up information on.
+wallops::/wallops argh, my server was just owned::writes a message to all irc operators on the server::message - the message to send
 window::/window #mIRC::creates a new window for the specified nick/#channel/=nick.::target - target to open a window for.
 ww::/ww blue-elf_::looks up information on who the specified user was.::nick - user to look up information on.
